force-app/main/default/objects/ErrorEvent__e/ErrorEvent__e.object-meta.xml
<CustomObject>
    <description>Used to logged errors within a different transaction</description>
    <label>Error Event</label>
    <pluralLabel>Error Events</pluralLabel>
</CustomObject>