force-app/main/default/objects/ErrorEvent__e/fields/LongMessage__c.field-meta.xml
<CustomField>
    <fullName>LongMessage__c</fullName>
    <description>Error Message with all the details</description>
    <label>Long Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>