force-app/main/default/objects/ErrorEvent__e/fields/RecordId__c.field-meta.xml
<CustomField>
    <fullName>RecordId__c</fullName>
    <description>Identifying Info of the Record (if any) that threw this error.</description>
    <label>Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>